@@ -33,6 +33,7 @@
 #include <time.h>
 
 #include "common.h"
+#include "comms.h"
 #include "db.h"
 #include "log.h"
 #include "zlog.h"
@@ -460,6 +461,8 @@ static zbx_uint64_t	add_discovered_host(zbx_uint64_t dhostid)
 	DB_ROW		row2;
 	zbx_uint64_t	hostid = 0;
 	char		*ip;
+        struct hostent* host;
+	char		host_esc[MAX_STRING_LEN];
 
 	zabbix_log(LOG_LEVEL_DEBUG, "In add_discovered_host(dhostid:" ZBX_FS_UI64 ")",
 		dhostid);
@@ -470,6 +473,20 @@ static zbx_uint64_t	add_discovered_host(zbx_uint64_t dhostid)
 	if(row && DBis_null(row[0]) != SUCCEED)
 	{
 		ip=row[0];
+
+		alarm(CONFIG_TIMEOUT);
+		host = zbx_gethost_by_ip(ip);
+		alarm(0);
+
+		if(host != NULL)
+		{
+			DBescape_string(host->h_name, host_esc, sizeof(host_esc));
+		}
+		else
+		{
+			host_esc[0]='\0';
+		}
+
 		result2 = DBselect("select hostid from hosts where ip='%s' and " ZBX_COND_NODEID,
 			ip,
 			LOCAL_NODE("hostid"));
@@ -477,14 +494,33 @@ static zbx_uint64_t	add_discovered_host(zbx_uint64_t dhostid)
 		if(!row2 || DBis_null(row2[0]) == SUCCEED)
 		{
 			hostid = DBget_maxid("hosts","hostid");
-			DBexecute("insert into hosts (hostid,host,useip,ip) values (" ZBX_FS_UI64 ",'%s',1,'%s')",
-				hostid,
-				ip,
-				ip);
+			/* Use host name if exists, IP otherwise */
+			if(host_esc[0] != '\0')
+			{
+				DBexecute("insert into hosts (hostid,host,useip,ip,dns) values (" ZBX_FS_UI64 ",'%s',1,'%s','%s')",
+					hostid,
+					host_esc,
+					ip,
+					host_esc);
+			}
+			else
+			{
+				DBexecute("insert into hosts (hostid,host,useip,ip,dns) values (" ZBX_FS_UI64 ",'%s',1,'%s','%s')",
+					hostid,
+					ip,
+					ip,
+					host_esc);
+			}
 		}
 		else
 		{
-			 ZBX_STR2UINT64(hostid, row2[0]);
+			ZBX_STR2UINT64(hostid, row2[0]);
+			if(host_esc[0] != '\0')
+			{
+				DBexecute("update hosts set dns='%s' where hostid=" ZBX_FS_UI64,
+					host_esc,
+					hostid);
+			}
 		}
 		DBfree_result(result2);
 	}
